# REU-2024

./: .gitignore  README.md
arduino-sketches/TrafficSub/: TrafficSub.ino
comfort_bags/: 1_outer.bag  1_v2x_paper_info_2024-07-13-17-46-26.bag  adaptive_dbscan_eastbound_2024-07-14-21-28-08.bag  adaptive_kmeans_eastbound_2024-07-14-21-32-15.bag  adaptive_kmeans_northbound_2024-07-14-21-13-57.bag  adaptive_kmeans_northbound_2024-07-14-21-14-17.bag  birdseye_northbound_2024-07-13-13-26-35.bag  birdseye_northbound_2024-07-13-15-20-33.bag  birdseye_northbound_2024-07-13-16-02-59.bag  birdseye_northbound_2024-07-13-16-15-38.bag  birdseye_northbound_2024-07-13-16-24-50.bag  birdseye_northbound_2024-07-13-16-32-35.bag  birdseye_northbound_2024-07-13-16-47-00.bag  birdseye_northbound_2024-07-14-10-33-44.bag  birdseye_northbound_2024-07-14-10-50-31.bag  birdseye_northbound_2024-07-14-10-53-16.bag  birdseye_northbound_2024-07-14-10-57-00.bag  birdseye_northbound_2024-07-14-10-57-13.bag  birdseye_northbound_2024-07-14-13-18-47.bag  birdseye_northbound_2024-07-14-13-21-51.bag  birdseye_northbound_2024-07-14-13-23-07.bag  birdseye_northbound_2024-07-14-13-31-44.bag  birdseye_northbound_2024-07-14-13-32-18.bag  birdseye_northbound_2024-07-14-13-40-17.bag  birdseye_northbound_2024-07-14-13-43-06.bag  birdseye_northbound_2024-07-14-13-48-47.bag  birdseye_northbound_2024-07-14-13-53-04.bag  birdseye_northbound_2024-07-14-14-00-52.bag  birdseye_northbound_2024-07-14-14-11-17.bag  birdseye_northbound_2024-07-14-14-16-19.bag  birdseye_northbound_2024-07-14-14-17-02.bag  birdseye_northbound_2024-07-14-14-20-42.bag  birdseye_northbound_2024-07-14-20-58-56.bag  birdseye_northbound_2024-07-14-20-59-19.bag  birdseye_northbound_2024-07-14-20-59-53.bag  birdseye_northbound_2024-07-14-21-09-36.bag  birdseye_northbound_2024-07-14-21-22-42.bag  dbscan_eastbound_2024-07-13-13-58-05.bag  dbscan_northbound_2024-07-13-13-51-36.bag  deeplsd_eastbound_2024-07-13-15-35-22.bag  (+88 more)
comfort_bags/csv/: birdseye_eastbound.csv  birdseye_northbound.csv  dbscan_eastbound.csv  dbscan_northbound.csv  deeplsd_eastbound.csv  deeplsd_northbound.csv  kmeans_eastbound.csv  kmeans_northbound.csv  largest_contour_eastbound.csv  largest_contour_northbound.csv  largest_contour_northbound_imu.csv  largest_contour_northbound_velocity.csv
comfort_bags/important_bags/: largest_contour_eastbound_2024-07-13-13-18-22.bag  largest_contour_northbound_2024-07-13-13-30-43.bag
comfort_bags/michaels_bags/: adaptive_40green_10red.bag  human_20green_20red.bag  stop_25green_25red.bag  stop_30green_10red.bag
comfort_bags/ping_outputs/: 1_inner.txt  (+3 more)
src/actor_demo/simple_camera_publisher/: CMakeLists.txt  README.md
src/actor_demo/simple_camera_publisher/launch/: camera_publisher.launch  example.launch
src/dbw_polaris_ros/dbw_polaris/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/dbw_polaris_ros/dbw_polaris/scripts/: joystick_demo.desktop  ros_install.bash  sdk_install.bash  sdk_update.bash
src/dbw_polaris_ros/dbw_polaris_joystick_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/dbw_polaris_ros/dbw_polaris_joystick_demo/launch/: joystick_demo.launch
src/dbw_polaris_ros/dbw_polaris_joystick_demo/src/: JoystickDemo.cpp  JoystickDemo.h  joystick_demo.cpp
src/dbw_polaris_ros/dbw_polaris_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/dbw_polaris_ros/dbw_polaris_msgs/bmr/: README.md
src/dbw_polaris_ros/dbw_polaris_msgs/bmr/1.0.0-1.0.1/: SteeringCmd.bmr  SteeringCmd.saved
src/dbw_polaris_ros/dbw_polaris_msgs/msg/: BrakeCmd.msg  BrakeReport.msg  GearReject.msg  SteeringCmd.msg  ThrottleCmd.msg  ThrottleReport.msg
src/gazelle_sim/gazelle_sim_models/gazelle_sim_barrel_course/: CMakeLists.txt  README.md  package.xml
src/gazelle_sim/gazelle_sim_models/gazelle_sim_barrel_course/launch/: barrel_course.launch
src/gazelle_sim/gazelle_sim_models/gazelle_sim_barrel_course/map/: barrel_course.yaml
src/gazelle_sim/gazelle_sim_models/gazelle_sim_color_line_follow/: CMakeLists.txt  README.md  package.xml
src/gazelle_sim/gazelle_sim_models/gazelle_sim_color_line_follow/launch/: color_line_folllow.launch
src/gazelle_sim/gazelle_sim_models/gazelle_sim_color_line_follow/map/: color_line_follow.yaml
src/gazelle_sim/gazelle_sim_models/gazelle_sim_color_zones/: CMakeLists.txt  README.md  package.xml
src/gazelle_sim/gazelle_sim_models/gazelle_sim_color_zones/launch/: color_zones.launch
src/gazelle_sim/gazelle_sim_models/gazelle_sim_color_zones/map/: color_zones.yaml
src/gazelle_sim/gazelle_sim_models/gazelle_sim_igvc/: CMakeLists.txt  LICENSE  README.md  package.xml
src/gazelle_sim/gazelle_sim_models/gazelle_sim_igvc/launch/: igvc.launch
src/gazelle_sim/gazelle_sim_models/gazelle_sim_igvc/map/: igvc.yaml  igvc_with_barrels.yaml
src/gazelle_sim/gazelle_sim_models/gazelle_sim_igvc/robot/: ACTor.yaml
src/gazelle_sim/gazelle_sim_models/gazelle_sim_line_course_obs/: CMakeLists.txt  README.md  package.xml
src/gazelle_sim/gazelle_sim_models/gazelle_sim_line_course_obs/launch/: line_course_obs.launch
src/gazelle_sim/gazelle_sim_models/gazelle_sim_line_course_obs/map/: line_course_obs.yaml
src/gazelle_sim/gazelle_sim_models/gazelle_sim_ltu_2024/: CMakeLists.txt  README.md  package.xml
src/gazelle_sim/gazelle_sim_models/gazelle_sim_ltu_2024/launch/: ltu_2024.launch
src/gazelle_sim/gazelle_sim_models/gazelle_sim_waypoint_course/: CMakeLists.txt  README.md  package.xml
src/gazelle_sim/gazelle_sim_models/gazelle_sim_waypoint_course/launch/: waypoint_course.launch
src/gazelle_sim/gazelle_sim_models/gazelle_sim_waypoint_course/map/: waypoint_course.yaml
src/libsbp_catkin/: CMakeLists.txt  README.md  package.xml  setup.py
src/libsbp_catkin/cmake/: libsbp-extras.cmake.in
src/libsbp_catkin/patches/: yaml_safe_load.patch
src/libserialport_catkin/: CMakeLists.txt  README.md  package.xml
src/libserialport_catkin/cmake/: libserialport-extras.cmake.in
src/simple_camera_publisher/: package.xml
src/simple_camera_publisher/launch/: camera_publisher.launch  example.launch
src/simple_camera_publisher/src/: cam_pub.cpp
(+558 files in other folders)
