<?xml version="1.0"?>
<package>
  <name>simple_camera_publisher</name>
  <version>0.0.0</version>

  <description>The simple_camera_publisher package</description>

  <maintainer email="npaul@ltu.edu">ltumcs</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export> </export>
</package>
