<?xml version="1.0"?>
<package format="2">
  <name>dbw_polaris</name>
  <version>1.1.3</version>
  <description>
    Drive-by-wire interface to the Dataspeed Inc. Polaris GEM/Ranger/RZR DBW kit
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_polaris_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_polaris_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dbw_polaris_can</exec_depend>
  <exec_depend>dbw_polaris_description</exec_depend>
  <exec_depend>dbw_polaris_joystick_demo</exec_depend>
  <exec_depend>dbw_polaris_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
