<?xml version="1.0"?>
<package format="2">
  <name>dbw_polaris_msgs</name>
  <version>1.1.3</version>
  <description>
    Drive-by-wire messages for Polaris platforms
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_polaris_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_polaris_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rosbag_migration_rule</exec_depend>

  <export>
    <rosbag_migration_rule rule_file="bmr/1.0.0-1.0.1/SteeringCmd.bmr"/>
  </export>

</package>
