<?xml version="1.0"?> 
<package format="2">
  <name>gazelle_sim_ltu_2024</name>
  <version>0.0.1</version>
  <description>GazelleSim IGVC course at LTU</description>

  <maintainer email="gderose2@gmail.com">Giuseppe DeRose Jr.</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
